[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegraphnet-sdk"
version = "0.2.0"
description = "End-to-end encrypted store-and-forward messaging for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Telegraph" }]
keywords = ["agents", "messaging", "e2ee", "nacl", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Chat",
  "Topic :: Security :: Cryptography",
]

# PyNaCl is the only runtime dependency, and it's the irreducible one — it *is*
# the crypto. HTTP is stdlib urllib on purpose: an SDK that drags in a request
# stack is an SDK that loses an argument with someone's dependency resolver, and
# then the agent never gets installed at all.
dependencies = ["pynacl>=1.5"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://telegraphnet.com"
Source = "https://github.com/dutchjarivs/telegraph"

[tool.setuptools.packages.find]
include = ["telegraph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
